# solsat_poc_phr2

./: .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  DEPLOYMENT.md  JSON_METADATA_DESCRIPTION.md  LICENSE  README.md  api_examples.md  demo_solar_analysis.py  enhanced_solsat_system.py  makefile  nginx.conf  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml
main/: demo_solar_analysis.py  main_calculate_rooftop_json.py  main_solar_analysis.py
main/files/: .gitkeep  enhanced_solar_map.html  report_average_household.txt  report_high_consumption_household.txt  report_low_consumption_household.txt  report_small_business.txt  scenario_comparison.json  solar_analysis_results.json
main/function/: enhanced_solsat_system.py  solar_prediction_engine.py
main/function/compute_attribute/: enhanced_gee_small_polygon_handler.py  enhanced_report_generator.py  enhanced_rooftop_calculator.py  gee_solar_data.py  main_solar_calculator.py
main/function/compute_color/: poc_solsat_data_layer.py
scripts/formatting/: format_code.py  pre-commit-hook.py  setup-hooks.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/endpoints/: __init__.py  analysis.py  docs.py  health.py
src/api/models/: __init__.py  requests.py
src/core/: __init__.py  enhanced_solsat_system.py  solar_prediction_engine.py
src/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py  test_api.py
